--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^8.0|^9.0",
+        "illuminate/support": "^8.0|^9.0|^10.0",
         "spatie/laravel-webhook-client": "^3.0",
-        "twilio/sdk": "^6.37"
+        "twilio/sdk": "^6.37|^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0|^7.0",
-        "phpunit/phpunit": "^9.4"
+        "orchestra/testbench": "^6.0|^7.0|^8.0",
+        "phpunit/phpunit": "^9.4|^10.0"
     },
     "autoload": {
         "psr-4": {
@@ -39,7 +39,8 @@
         }
     },
     "suggest": {
-            "binary-cats/laravel-lob-webhooks": "^9.0"
+            "binary-cats/laravel-lob-webhooks": "Handle Lob.com webhooks in a Laravel application",
+            "binary-cats/laravel-mailgun-webhooks": "Handle mailgun.com webhooks in a Laravel application"
     },
     "scripts": {
         "coverage": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-html coverage -d pcov.enabled",
